# LabelTool

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  scribblearea.cpp  scribblearea.h
